--- a/README.rdoc
+++ b/README.rdoc
@@ -1,20 +1,20 @@
 
-*Photogur*
+#**Photogur**
 
-Description
+###Description
 * Basic Rails app that allows users to link to images and provide the photographers name and a title
 * App includes one model for Pictures
 
-Versions
+###Versions
 * Ruby version 2.3.0
 * Rails version 4.2.5
 
-Gems
+###Gems
 * No additional gems, beyond the default gems included in rails
 
-Set-up
+###Set-up
 * Instal gems
 * Migrate models
 
-Additional
+###Additional
 * No additional set-up required
